# Laba-1

./: CMakeLists.txt  README.md  main.cpp  test_version.cpp
.github/workflows/: ci.yml
